third_party/llvm-project/flang/test/Semantics/implicit10.f90
! RUN: %python %S/test_errors.py %s %flang_fc1 -fimplicit-none

!ERROR: No explicit type declared for 'f'
function f()
  !ERROR: No explicit type declared for 'x'
  f = x
end
